tentative de refactorisation

--- a/billjobs/templates/billjobs/statistics.html
+++ b/billjobs/templates/billjobs/statistics.html
@@ -166,8 +166,8 @@
 
   </div>
   </section>
-  <!-- <p>HI {{ get_month}}</p>
-  {% for entry in get_month %}
+  <p>HI {{ test}}</p>
+  {% for entry in test %}
           <p>{{entry}}</p>
-      {% endfor %} -->
+      {% endfor %}
 {% endblock body %}
